Remove manual deletes now that memory bug is fixed